# robot_arm

./: .gitignore  Makefile  README.md  README_ubuntu_sync.md
arm_ws/src/robot_arm_opencr_bridge/: package.xml  setup.cfg  setup.py
arm_ws/src/robot_arm_opencr_bridge/launch/: opencr_moveit.launch.py
arm_ws/src/robot_arm_opencr_bridge/robot_arm_opencr_bridge/: opencr_trajectory_bridge.py
cad/: README.md
docs/: fusion_joint_setup_notes.md  fusion_to_urdf_plan.md  hand_yz_camera_follow.md  manual_joint_tuning.md  moveit_sim_start.md  pose_teaching_workflow.md  pybullet_rl.md  robot_arm_control_goal.md  robot_arm_control_startup.md  robot_arm_next_roadmap.md  tool0_point_workflow.md  ubuntu_coordinate_fix_instructions.md  ubuntu_development_setup.md
outputs/: hand_yz_targets.csv  latest_hand_yz.json  rl_reacher_eval_trajectory.csv  rl_reacher_q_policy.json  rl_reacher_training.csv  robot_arm_fusion_j2_origin_bracket_center.urdf  robot_arm_fusion_j2_origin_dummy_center.urdf  robot_arm_fusion_j2_origin_dummy_origin.urdf  robot_arm_fusion_j2_origin_motor_origin.urdf  robot_arm_fusion_j2_x_minus.urdf  robot_arm_fusion_j2_x_plus.urdf  robot_arm_fusion_j2_y_current.urdf  robot_arm_fusion_j2_y_minus.urdf  robot_arm_fusion_j3_origin_current.urdf  robot_arm_fusion_j3_origin_fr12_center.urdf  robot_arm_fusion_j3_origin_fr12_origin.urdf  robot_arm_fusion_j3_origin_horn1_origin.urdf  robot_arm_fusion_j3_origin_motor_origin.urdf  taught_poses.csv  tool0_cube_points.csv  tool0_line_trajectory.csv  tool0_line_trajectory_current.csv  tool0_pose_table.csv  tool0_rectangle_points.csv  (+1 more)
(+135 files in other folders)
