<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_opencr_bridge</name>
  <version>0.0.1</version>
  <description>FollowJointTrajectory to OpenCR serial bridge for the custom robot arm.</description>
  <maintainer email="yuhei@example.com">yuhei</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_arm_moveit_config</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
